--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4093,7 +4093,13 @@
   "description.unlockFarmhand": "This {{name}} allows you to unlock a new farmhand to help on your farm.",
   "bedsMigration.bedsNeeded": "Beds Needed!",
   "bedsMigration.bedsNeededDescription": "Farm hands need beds in order to work on the farm.",
-  "bedsMigration.bedsNeededDescription2": "Place beds to hire more farmhands!",
+  "bedsMigration.bedsNeededDescription2": "Each unique bed can sleep one farm hand.",
+  "bedsMigration.bedsNeededDescription3": "Place beds to hire more farmhands!",
+  "bedsMigration.status.occupied": "Occupied",
+  "bedsMigration.status.unoccupied": "Empty",
+  "bedsMigration.status.notPlaced": "Not Placed",
+  "bedsMigration.farmHandCount": "{{count}}/8",
+  "bedsMigration.label": "My Beds.",
   "farmHand": "Farm Hand",
   "description.petting.hand": "Pets animals. Use this to show affection to your animals.",
   "description.brush": "Animal Brush. Use this to show affection to your animals.",
