--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4100,7 +4100,7 @@
   "bedsMigration.status.unoccupied": "Empty",
   "bedsMigration.status.notPlaced": "Not Placed",
   "bedsMigration.farmHandCount": "{{count}}/8",
-  "bedsMigration.label": "My Beds.",
+  "bedsMigration.label": "My Beds",
   "farmHand": "Farm Hand",
   "description.petting.hand": "Pets animals. Use this to show affection to your animals.",
   "description.brush": "Animal Brush. Use this to show affection to your animals.",
