--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -905,9 +905,9 @@
   "description.enchanted.rose": "Enchanted Rose，永生美丽的象征，沉迷在她的魔法魅力里吧。",
   "description.flower.cart": "Flower Cart，满盛花开，移动花园推动鲜花喜悦。",
   "description.capybara": "Capybara，悠闲伙伴，享受水边的慵懒时光。",
-  "description.prism.petal": "哇！好一朵漂亮鲜花！我看这朵很值得你放在农场上。",
-  "description.celestial.frostbloom": "哇！好一朵漂亮鲜花！我看这朵很值得你放在农场上。",
-  "description.primula.enigma": "哇！好一朵漂亮鲜花！我看这朵很值得你放在农场上。",
+  "description.prism.petal": "棱晶瓣花。哇！好一朵漂亮鲜花！我看这朵很值得你放在农场上。",
+  "description.celestial.frostbloom": "天霜花。哇！好一朵漂亮鲜花！我看这朵很值得你放在农场上。",
+  "description.primula.enigma": "报春帘花。哇！好一朵漂亮鲜花！我看这朵很值得你放在农场上。",
   "description.red.daffodil": "红水仙花。一朵红水仙花。",
   "description.yellow.daffodil": "黄水仙花。一朵黄水仙花。",
   "description.purple.daffodil": "紫水仙花。一朵紫水仙花。",
@@ -2817,44 +2817,44 @@
   "npcDialogues.peggy.noOrder1": "啊，看来我目前没有生效订单给你。但你可以随心所欲在广场上探索并掀起你的烹饪狂潮！",
   "npcDialogues.peggy.noOrder2": "今天没有给你的订单，但别因此停下脚步！如果你需要任何烹饪建议或者只是想聊一聊，我都在这里！",
   "npcDialogues.pumpkinPete.reward": "衷心感谢你的送货。感激薄礼还请收下。",
-  "npcDialogues.pumpkinPete.flowerIntro": "你见过黄波斯菊的优雅吗？我想要一个……",
+  "npcDialogues.pumpkinPete.flowerIntro": "你见过黄波斯菊的优雅吗？我想要一朵……",
   "npcDialogues.pumpkinPete.averageFlower": "不完全是我所想的，但很迷人。谢谢。",
   "npcDialogues.pumpkinPete.badFlower": "这不是我想要的。也许你可以找到更合适的？",
-  "npcDialogues.pumpkinPete.goodFlower": "这个黄波斯菊太棒了！谢谢你把它带给我。",
-  "npcDialogues.betty.reward": "我很感激你的贴心礼物。这里有一些东西可以表达我的感激之情。",
-  "npcDialogues.betty.flowerIntro": "你能想象红色、黄色、紫色、白色或蓝色三色三色菊的美丽吗？我渴望一个...",
-  "npcDialogues.betty.averageFlower": "不完全是我所期望的，但是很可爱。谢谢。",
-  "npcDialogues.betty.badFlower": "这不是我的想法。你能试着找一朵更合适的花吗？",
-  "npcDialogues.betty.goodFlower": "这个 Pansy 很漂亮！谢谢你把它带给我。",
+  "npcDialogues.pumpkinPete.goodFlower": "这朵黄波斯菊太棒了！谢谢你把它带给我。",
+  "npcDialogues.betty.reward": "我很感激你的贴心礼物。这里有小小薄礼谨此表达我的感激之情。",
+  "npcDialogues.betty.flowerIntro": "你能想象红、黄、紫、白或蓝三色堇的美丽吗？我渴望要一朵……",
+  "npcDialogues.betty.averageFlower": "不完全是我期待的那朵，但是很可爱。谢谢。",
+  "npcDialogues.betty.badFlower": "这不是我想的那朵。你能试着找一朵更合适的花吗？",
+  "npcDialogues.betty.goodFlower": "这朵三色堇很漂亮！谢谢你把它带给我。",
   "npcDialogues.blacksmith.reward": "非常感谢您的配送。这里有一些值得你努力的东西。",
-  "npcDialogues.blacksmith.flowerIntro": "我需要一朵鲜艳的红色康乃馨。你碰到过一个吗？",
-  "npcDialogues.blacksmith.averageFlower": "不完全是我所希望的，但是很不错。谢谢。",
-  "npcDialogues.blacksmith.badFlower": "这朵花不太对劲。你能找一个更合适的吗？",
-  "npcDialogues.blacksmith.goodFlower": "啊，这个红色康乃馨太完美了！谢谢你把它带给我。",
-  "npcDialogues.bert.reward": "感谢您一直以来的帮助。这是一小段感激之情。",
-  "npcDialogues.bert.flowerIntro": "红色、黄色、紫色、白色或蓝色的莲花真的很迷人。你有吗？",
-  "npcDialogues.bert.averageFlower": "这不是我的想法，但非常令人愉快。谢谢。",
-  "npcDialogues.bert.badFlower": "这不是我需要的花。也许需要再进行一次搜索？",
+  "npcDialogues.blacksmith.flowerIntro": "我需要一朵鲜艳的红康乃馨。你碰上过一朵吗？",
+  "npcDialogues.blacksmith.averageFlower": "不完全是我希望的那朵，但也很不错。谢谢。",
+  "npcDialogues.blacksmith.badFlower": "这朵花不太对。你能找一朵更合适的吗？",
+  "npcDialogues.blacksmith.goodFlower": "啊，这朵红康乃馨太完美了！谢谢你把它带给我。",
+  "npcDialogues.bert.reward": "感谢您孜孜不倦的帮助。这里是小小谢礼。",
+  "npcDialogues.bert.flowerIntro": "红、黄、紫、白或蓝的莲花是真的很迷人。你有一朵不？",
+  "npcDialogues.bert.averageFlower": "这不是我想要的那朵，但也非常令人欢喜。谢谢。",
+  "npcDialogues.bert.badFlower": "这不是我需要的花。也许需要再找一找？",
   "npcDialogues.bert.goodFlower": "这朵莲花太精致了！谢谢你把它带给我。",
-  "npcDialogues.finn.reward": "你的贡献是无价的。这里有一些东西可以表达我的感激之情。",
-  "npcDialogues.finn.flowerIntro": "我渴望一个漂亮的白色或蓝色的宇宙。你能找到一个吗？",
-  "npcDialogues.finn.averageFlower": "不完全是我所希望的，但很令人高兴。谢谢。",
+  "npcDialogues.finn.reward": "你的贡献无比宝贵。这里有小小敬意以表达我的感激之情。",
+  "npcDialogues.finn.flowerIntro": "我渴望要一朵漂亮的白或蓝波斯菊。你能够找来一朵吗？",
+  "npcDialogues.finn.averageFlower": "不完全是我希望的那朵，但也很让我高兴。谢谢。",
   "npcDialogues.finn.badFlower": "这朵花不太符合我的期望。也许再试一次？",
-  "npcDialogues.finn.goodFlower": "这个波斯菊太棒了！谢谢你把它带给我。",
-  "npcDialogues.finley.reward": "感谢你的努力。以下是对您的配送表示感谢的一小段感谢。",
-  "npcDialogues.finley.flowerIntro": "一朵可爱的水仙花，就像我正在想的那样，会让我的生活更加美好。你看过一个吗？",
-  "npcDialogues.finley.averageFlower": "这不完全是我的想法，但它非常迷人。谢谢。",
-  "npcDialogues.finley.badFlower": "这朵花不太对劲。也许再来一个更合适？",
-  "npcDialogues.finley.goodFlower": "这个水仙花很漂亮！谢谢你把它带给我。",
-  "npcDialogues.corale.reward": "非常感谢您的配送。这里有一些东西可以表达我的感激之情。",
-  "npcDialogues.corale.flowerIntro": "你见过光芒四射的棱镜花瓣吗？简直太迷人了...",
-  "npcDialogues.corale.averageFlower": "不完全是我所希望的，但非常令人愉快。谢谢。",
-  "npcDialogues.corale.badFlower": "这不完全是我的想法。你能找到更合适的花吗？",
-  "npcDialogues.corale.goodFlower": "这款 Prism Petal 太精致了！谢谢你把它带给我。",
-  "npcDialogues.raven.reward": "感谢您的配送。以下是对你的努力的感激之情。",
-  "npcDialogues.raven.flowerIntro": "深紫色是我灵魂的颜色 —— 你遇到过这样的东西吗？",
-  "npcDialogues.raven.averageFlower": "不完全是我所期望的，但很令人高兴。谢谢。",
-  "npcDialogues.raven.badFlower": "这朵花不太对劲。也许还需要再进行一次搜索？",
+  "npcDialogues.finn.goodFlower": "这朵波斯菊太棒了！谢谢你把它带给我。",
+  "npcDialogues.finley.reward": "感谢你的努力。这里是对配送的小小感激、不成敬意。",
+  "npcDialogues.finley.flowerIntro": "一朵可爱的水仙花，比如我正在想念那朵，能叫我生活光明百倍。你有看见吗？",
+  "npcDialogues.finley.averageFlower": "虽然不完全是我想的那朵，但非常迷人。谢谢。",
+  "npcDialogues.finley.badFlower": "这朵花不太对。也许换一个更合适？",
+  "npcDialogues.finley.goodFlower": "这朵水仙花真漂亮！谢谢你把它带给我。",
+  "npcDialogues.corale.reward": "非常感谢您的配送。这里有小小薄礼以示我感激之情。",
+  "npcDialogues.corale.flowerIntro": "你可曾见过光芒四射的棱晶瓣花吗？简直太迷人了……",
+  "npcDialogues.corale.averageFlower": "不完全是我希望的那朵，但也非常令人欣喜。谢谢。",
+  "npcDialogues.corale.badFlower": "这不完全是我想的那朵。你能找到更合适的花吗？",
+  "npcDialogues.corale.goodFlower": "这款棱晶瓣花太精致了！谢谢你把它带给我。",
+  "npcDialogues.raven.reward": "感谢您的送货。以下是对你努力的感激之情。",
+  "npcDialogues.raven.flowerIntro": "深紫色是我灵魂的底色 —— 你有遇到过这样的事情吗？",
+  "npcDialogues.raven.averageFlower": "不完全是我期待的那朵，但也很令人愉快。谢谢。",
+  "npcDialogues.raven.badFlower": "这朵花不太对。也许还需要再找一找？",
   "npcDialogues.raven.goodFlower": "这朵紫色的花很完美！谢谢你把它带给我。",
   "npcDialogues.salty.reward": "啊，谢谢你的配送，伙计。这里有一些东西可以解决你的麻烦。",
   "npcDialogues.salty.flowerIntro": "是的，海洋的深蓝色是我所追求的。你们见过像大海一样蓝的花吗？",
