--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -636,7 +636,7 @@
   "cropMachine.seeds": "Семена: {{amount}}",
   "cropMachine.growTime": "Время роста: {{time}}",
   "cropMachine.all": "Все",
-  "cropMachine.addSeedPack": "Добавить семя кучей",
+  "cropMachine.addSeedPack": "Добавить семена кучей",
   "cropMachine.notStartedYet": "Не запущено",
   "cropMachine.seedPacks": "Наборы семян",
   "cropMachine.readyCropPacks": "Готовые пакеты урожая",
@@ -3742,8 +3742,8 @@
   "chore.mine.10.crimstone": "Добудь 10 Кримстоуна",
   "chore.mine.12.crimstone": "Добудь 12 Кримстоуна",
   "chore.mine.15.crimstone": "Добудь 15 Кримстоуна",
-  "chore.craft.20.iron.pickaxe": "Сделай 20 Железных киркок",
-  "chore.craft.25.iron.pickaxe": "Сделай 25 Железных киркок",
+  "chore.craft.20.iron.pickaxe": "Сделай 20 Железных кирок",
+  "chore.craft.25.iron.pickaxe": "Сделай 25 Железных кирок",
   "chore.craft.15.gold.pickaxe": "Сделай 15 Золотых кирок",
   "chore.craft.20.gold.pickaxe": "Сделай 20 Золотых кирок",
   "chore.spend.35000.coins": "Потратьте 35 000 монет",
@@ -3777,8 +3777,8 @@
   "chore.harvest.240.radishes": "Собери 240 редиски",
   "chore.harvest.200.wheat": "Собери 200 пшеницы",
   "chore.harvest.240.wheat": "Собери 240 пшеницы",
-  "chore.harvest.175.kale": "Собери 175 капусты",
-  "chore.harvest.200.kale": "Собери 200 капусты",
+  "chore.harvest.175.kale": "Собери 175 Кейла",
+  "chore.harvest.200.kale": "Собери 200 Кейла",
   "chore.cook.15.honey.cake": "Приготовь 15 Медовых тортов",
   "chore.cook.20.honey.cake": "Приготовь 20 Медовых тортов",
   "chore.cook.3.parsnip.cake": "Приготовь 3 торта с пастернаком",
@@ -4024,18 +4024,18 @@
   "animal.notEnoughFood": "Недостаточно еды",
   "feeder.foodTypes.food": "Еда",
   "feeder.foodTypes.medicine": "Медицина",
-  "animal.noMedicine": "Лекарства нет",
-  "description.craftingBox": "Коробка для изготовления различных предметов.",
-  "description.basicBed": "Простая кровать, здесь может спать одна фермерская рука.",
+  "animal.noMedicine": "Лекарств нет",
+  "description.craftingBox": "Верстак для изготовления различных предметов.",
+  "description.basicBed": "Простая кровать, здесь может спать один фермер.",
   "description.sturdyBed": "Прочная кровать, здесь может спать один фермер.",
-  "description.floralBed": "Цветочная клумба, здесь может спать одна рука фермера.",
+  "description.floralBed": "Цветочная клумба, здесь может спать одна фермер.",
   "description.fisherBed": "Ложе для рыбака, здесь может спать один фермер.",
   "description.pirateBed": "Пиратская кровать, здесь может спать один фермер.",
   "description.cowBed": "Коровья кровать, здесь может спать один фермер.",
   "description.desertBed": "Кровать в пустыне, здесь может спать один фермер.",
   "description.royalBed": "Королевская кровать, здесь может спать один фермер.",
   "craftingBox.newRecipeDiscovered": "Обнаружен новый рецепт!",
-  "craftingBox.craftThisItem": "Изготовьте этот предмет в коробке для рукоделия.",
+  "craftingBox.craftThisItem": "Изготовьте этот предмет на верстаке.",
   "quest.marine.marvel": "Поймайте каждое постоянное морское чудо",
   "mix.ten": "Смешайте 10",
   "description.bullRunBanner": "Баннер, посвященный сезону Bull Run.",
@@ -4043,11 +4043,11 @@
   "description.horseshoe": "Ценная подкова — обмен на награды!",
   "description.el.pollo.veloz.one": "Ваши цыплята будут откладывать яйца на 2 часа быстрее!",
   "description.el.pollo.veloz.two": "Быстро дайте мне эти яйца! Цыплята спят на 2 часа короче.",
-  "unlock.farmhand": "Разблокируйте Farmhand",
+  "unlock.farmhand": "Разблокируйте дополнительно помощника",
   "description.unlockFarmhand": "Это {{name}} позволит вам найти нового фермера, который поможет вам на ферме.",
   "bedsMigration.bedsNeeded": "Нужны кровати!",
   "bedsMigration.bedsNeededDescription": "Работникам фермы нужны кровати для работы на ферме.",
-  "farmHand": "Фермерская рука",
+  "farmHand": "Помощника",
   "description.petting.hand": "Домашние животные. Используйте это, чтобы выразить привязанность к своим животным.",
   "animal.toolRequired": "{{tool}} Обязательно",
   "description.gold.egg.boost": "Кормите цыплят бесплатно",
@@ -4076,7 +4076,7 @@
   "description.sheafOfPlenty": "Пучок ячменя, собранный в пик спелости, символизирует изобилие и тяжелую работу сезона. +2 Ячмень",
   "description.mechanicalBull": "Оживленный аттракцион и испытание на выносливость! Садитесь на механического быка и посмотрите, сможете ли вы удержаться.",
   "description.dreamScarf.boost": "-20% времени производства овец",
-  "description.milkApron.boost": "+0,5 Молоко",
+  "description.milkApron.boost": "+0.5 Молоко",
   "description.sheafOfPlenty.boost": "+2 Ячмень",
   "digby.streakReward": "Откройте для себя три {{name}} и получите бонусный приз. Открывайте ежедневные серии и получайте дополнительные награды.",
   "double.delivery.hint": "Psssssst... за доставку по адресу {{date}} вы получите двойное вознаграждение.",
@@ -4094,14 +4094,14 @@
   "craftingBoxGuide.failed": "Если совпадение не будет найдено, крафтинг закончится неудачей.",
   "craftingBoxGuide.success": "Предмет будет изготовлен, если будет найдено совпадение.",
   "craftingBoxGuide.viewRecipe": "Изготовленные предметы будут сохранены в ваших рецептах.",
-  "description.infernalBullwhip": "Этот грозный бычий кнут наделен огненной силой, поэтому он не только устрашает, но и эффективен. -50% корма для коровника",
+  "description.infernalBullwhip": "Этот грозный бычий кнут наделен огненной силой, поэтому он не только устрашает, но и эффективен. -50% корма внутри коровника",
   "description.chickenSuit": "В этом игривом курином костюме вы сможете принять участие в любом мероприятии! +1 перо",
   "description.cowbellNecklace": "Очаровательное ожерелье для любого любителя молочных продуктов с изображением маленького колокольчика, перед которым коровы не могут устоять! +2 молока",
   "description.blackSheepOnesie": "Выделитесь из толпы в этом мягком теплом комбинезоне. Этот очаровательный наряд из черной овечки придаст уютной одежде забавную изюминку. +2 шерсти",
   "description.merinoJumper": "Этот уютный джемпер, изготовленный из высококачественной шерсти, обеспечивает непревзойденное тепло и комфорт. +1 шерсть мериноса",
   "description.mooVer": "Уникальное устройство, поддерживающее активность и здоровье коров. +0.25 Кожа",
   "description.swissWhiskers": "Этот опытный шеф-повар, настоящий кулинарный гений в миниатюре, доводит до совершенства каждый рецепт сыра своим экспертным подходом. +500 Cheese Recipe XP",
-  "description.cluckulator": "Эти специальные весы точно взвешивают каждую курицу, гарантируя, что она получит идеальную порцию корма для сбалансированного роста и здоровья, а также повышая эффективность и экологичность ухода за птицей. -25% Корма курице",
+  "description.cluckulator": "Эти специальные весы точно взвешивают каждую курицу, гарантируя, что она получит идеальную порцию корма для сбалансированного роста и здоровья, а также повышая эффективность и экологичность ухода за птицей. -25% Корма курицам",
   "description.ufo": "Говорят, что этот внеземной корабль излучает мягкое свечение и гул, создавая ауру удивления и любопытства. Не спускайте глаз с неба — кто знает, какие потусторонние тайны оно может раскрыть!",
   "description.infernalBullwhip.boost": "-50% корма для коровника",
   "description.chickenSuit.boost": "+1 Перо",
@@ -4109,8 +4109,8 @@
   "description.blackSheepOnesie.boost": "+2 Шерсть",
   "description.merinoJumper.boost": "+1 мериносовая шерсть",
   "description.mooVer.boost": "+0.25 Кожа",
-  "description.swissWhiskers.boost": "+500 рецептов сыра XP",
-  "description.cluckulator.boost": "-25% корма для курицы",
+  "description.swissWhiskers.boost": "+500 опыта с сыра",
+  "description.cluckulator.boost": "-25% корма для куриц",
   "chores.ended": "Все это время я говорю Бампкинсу, что делать... Я устала. Думаю, мне нужен отпуск.",
   "digby.closed": "Пустыня закрыта",
   "digby.holiday": "Сегодня пустыня закрыта. Возвращайтесь позже.",
@@ -4129,20 +4129,20 @@
   "chickens.deprecated.2": "Продавайте существующих цыплят в Garbo.",
   "description.blackSheep": "На вашей ферме поселилась черная овца.",
   "mailbox.whatsOn": "Что происходит",
-  "whatsOn.bullRunBegins": "Бег быков начинается!",
+  "whatsOn.bullRunBegins": "Сезон Бул Ран начинается!",
   "whatsOn.animalsAndCrafting": "Животные и рукоделие",
   "whatsOn.theRaceBegins": "Гонка начинается",
   "whatsOn.sflMarketplace": "Торговая площадка SFL",
   "whatsOn.auctionWeek": "Неделя аукционов",
   "whatsOn.animalCompetition": "Конкурс животных",
   "whatsOn.mysterySeason": "Мистический сезон",
-  "whatsOn.bullRunText": "Сезон бега быков начинается! Возьмите свой VIP-баннер и приготовьтесь к гонке.",
+  "whatsOn.bullRunText": "Сезон Бул Ран начинается! Возьмите свой VIP-баннер и приготовьтесь к гонке.",
   "whatsOn.cowSkullsText": "В пустыне появились коровьи черепа и новые головоломки!",
-  "whatsOn.choreBoardText": "Теперь доступна новая 7-дневная доска по рутинной работе.",
+  "whatsOn.choreBoardText": "Теперь доступна новое 7-дневные задания.",
   "whatsOn.poppyShopText": "Цветочный магазин Поппи обновлен.",
   "whatsOn.animalsLiveText": "Теперь животные живы! Кормите их, дойте, стригите и многое другое!",
-  "whatsOn.craftingBoxText": "Теперь вы можете построить ящик для рукоделия и изготовить новые предметы!",
-  "whatsOn.bedsText": "Создайте 8 кроватей, чтобы разблокировать дополнительные руки на ферме.",
+  "whatsOn.craftingBoxText": "Теперь вы можете построить верстак и изготовить новые предметы!",
+  "whatsOn.bedsText": "Создайте 8 кроватей, чтобы разблокировать помощников на ферме.",
   "whatsOn.megastoreText": "Обменяйте подковы на NFT в Megastore или выиграйте их в аукционном доме",
   "whatsOn.sflMarketplaceText": "Торговая площадка $SFL уже запущена! Обменяйте доллары SFL на NFT.",
   "whatsOn.auctionText": "Соревнуйтесь и предлагайте своим друзьям лучшие NFT!",
@@ -4154,12 +4154,12 @@
   "whatsOn.date.dec18Jan31": "18 декабря — 31 января",
   "whatsOn.date.feb1": "1 февраля",
   "description.whiteSheepOnesie.boost": "+0.25 Шерсть",
-  "description.whiteSheepOnesie": "Уютно устроитесь в этом пушистом шерстяном комбинезоне, который идеально подходит для уютного вечера или веселого дня на площади! Благодаря своему неотразимому шарму, вы станете самой симпатичной овцей в стаде. Шерсть 0,25+",
+  "description.whiteSheepOnesie": "Уютно устроитесь в этом пушистом шерстяном комбинезоне, который идеально подходит для уютного вечера или веселого дня на площади! Благодаря своему неотразимому шарму, вы станете самой симпатичной овцей в стаде. Шерсть +0.25",
   "time.millisecond.full": "миллисекунда",
   "time.milliseconds.full": "миллисекунд",
-  "time.ms.med": "мс",
-  "time.mss.med": "масса",
-  "time.millisecond.short": "мс",
+  "time.ms.med": " мс",
+  "time.mss.med": " мс",
+  "time.millisecond.short": " мс",
   "time.milliseconds.ago": "{{time}} {{millisecondORmilliseconds}} назад",
   "megaStore.tier.rare.requirements": "Купите 4 основных предмета, чтобы разблокировать редкие предметы.",
   "megaStore.tier.epic.requirements": "Купите 4 редких предмета, чтобы разблокировать эпические предметы.",
@@ -4188,10 +4188,10 @@
   "description.speed.chicken.two": "Производит яйца на 10% быстрее.",
   "description.fat.chicken.one": "Теперь вашим цыплятам потребуется на 10% меньше еды при каждом кормлении.",
   "description.fat.chicken.two": "Для кормления курицы нужно на 10% меньше еды.",
-  "description.rich.chicken.one": "Теперь ваши цыплята дадут на 0,1 яйца больше.",
-  "description.rich.chicken.two": "Этот цыпленок-мутант повышает урожайность яиц на 0,1.",
+  "description.rich.chicken.one": "Теперь ваши цыплята дадут на 0.1 яйца больше.",
+  "description.rich.chicken.two": "Этот цыпленок-мутант повышает урожайность яиц на 0.1.",
   "description.ayam.cemani": "Самая редкая курица в Sunflower Land!",
-  "description.undead.rooster": "Несчастная жертва войны. Урожай яиц +0,1.",
+  "description.undead.rooster": "Несчастная жертва войны. Урожай яиц +0.1.",
   "description.bale": "Повысьте урожайность яиц.",
   "description.bale.boost": "+0,1 Яйцо",
   "description.fat.chicken.boost": "Корм курице: -10%",
@@ -4201,7 +4201,7 @@
   "description.free.range": "+0.1 Продукты животного происхождения",
   "description.chicken.coop": "Курятник, в котором можно выращивать цыплят. Увеличьте яйценоскость с помощью этого редкого курятника.",
   "description.gold.egg": "Золотое яйцо. Известно, что то, что лежит внутри, приносит удачу.",
-  "season.codex.howToEarn.two": "Выполните работу по дому для Бампкинса. (11 ноября)",
+  "season.codex.howToEarn.two": "Выполните работу по дому для Бампкинсов. (11 ноября)",
   "season.codex.howToEarn.three": "Торгуйте наградами за животных и цветы! (11 ноября)",
   "megaStore.tier.mega.requirements": "Купите 4 эпических предмета, чтобы разблокировать мегапредметы.",
   "description.cowboyHat.boost": "+1 Подковы",
@@ -4217,9 +4217,9 @@
   "description.community.coin": "(WIP) Ценная монета, зарезервированная для будущего использования в Sunflower Land.",
   "bedsMigration.bedsNeededDescription2": "На каждой уникальной кровати может разместиться одна рука фермера.",
   "bedsMigration.bedsNeededDescription3": "Разместите кровати, чтобы нанять больше фермеров!",
-  "bedsMigration.status.occupied": "Оккупированный",
-  "bedsMigration.status.unoccupied": "Пусто",
-  "bedsMigration.status.notPlaced": "Не размещено",
+  "bedsMigration.status.occupied": "Занято",
+  "bedsMigration.status.unoccupied": "Свободно",
+  "bedsMigration.status.notPlaced": "Надо поставить",
   "bedsMigration.farmHandCount": "{{count}} /8",
   "bedsMigration.label": "Мои кровати",
   "whatsOn.auction.tickets": "На этой неделе никаких подков от работы по дому и наград.",
