[FEAT] Whatson update

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4223,5 +4223,6 @@
   "description.alien.chicken": "A peculiar chicken from another galaxy, here to boost your feather production!",
   "description.toxic.tuft": "A mutated sheep whose toxic fleece produces the finest merino wool in the land!",
   "description.mootant": "This genetically enhanced bovine here to boost your leather production!",
-  "description.cropCircle": "A mysterious circle that appears on your farm...what could it mean?"
+  "description.cropCircle": "A mysterious circle that appears on your farm...what could it mean?",
+  "whatsOn.auction.tickets": "No horseshoes from chores and bounties this week."
 }
