[FIX] Clarify ticket period

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4205,7 +4205,7 @@
   "whatsOn.mysterySeasonText": "Prepare your resources & master the marketplace. The mystery season is coming!",
   "whatsOn.date.nov1": "November 1st",
   "whatsOn.date.nov4": "November 4th",
-  "whatsOn.date.nov6Dec11": "November 6th - Dec 9th",
+  "whatsOn.date.nov6Dec11": "November 6th - Jan 31st",
   "whatsOn.date.dec2": "December 2nd",
   "whatsOn.date.dec11Dec18": "December 9th - Dec 16th",
   "whatsOn.date.dec18Jan31": "December 18th - Jan 31st",
