--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4233,5 +4233,13 @@
   "description.sourShake": "A tangy and refreshing lemon drink",
   "description.spaghettiLimone": "A zesty pasta dish with lemon and cheese",
   "description.lemonCheesecake": "A creamy cheesecake with a citrus twist",
-  "gems.shipment.useGems": "Use Gems to unlock more stock"
+  "gems.shipment.useGems": "Use Gems to unlock more stock",
+  "description.kingOfBears": "The king of all bears. It has the power to generate more honey for  its own consumption.",
+  "description.halloweenScarecrow": "A scary looking scarecrow",
+  "description.vampireBear": "Don't put me under the sun!",
+  "description.superTotem": "2x speed for crops, trees, fruits, cooking & minerals. Lasts for 7 days",
+  "description.kingOfBears.boost": "Increase Honey Yield per full beehive +0.25",
+  "description.superTotem.boost": "50% Reduction to Crop, Mineral, Fruit, Cooking and Tree Time",
+  "description.super.totem.expired": "Your Super Totem has expired. Head to the Pumpkin Plaza to discover and craft more magical items to boost your farming abilities!",
+  "description.super.totem.temporarily": "The Super Totem temporarily boosts your cooking, crops, trees & mineral time. Make the most of it!"
 }
