[FEAT] Chest Additional Notes for Totem not Stacking

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2221,6 +2221,9 @@
   "landscape.hourglass.resourceNodeCondition.blossom": "Please ensure no flowers are growing before activating the {{selectedChestItem}}.",
   "landscape.hourglass.resourceNodeCondition.ore": "Please ensure no minerals are regenerating before activating the {{selectedChestItem}}.",
   "landscape.timeWarpTotem.resourceNodeCondition": "Please ensure no minerals or trees are regenerating, no crops or fruits are growing, and no cooking buildings are working before activating the {{selectedChestItem}}.",
+  "landscape.superTotem.resourceNodeCondition": "Please ensure no minerals or trees are regenerating, no crops or fruits are growing, and no cooking buildings are working before activating the {{selectedChestItem}}.",
+  "landscape.timeWarpTotem.nonStack": "Boost doesn't stack with Super Totem",
+  "landscape.superTotem.nonStack": "Boost doesn't stack with Time Warp Totem",
   "leaderboard.leaderboard": "Leaderboard",
   "leaderboard.error": "Error loading leaderboard. Please try again later.",
   "leaderboard.initialising": "Calculating your rank. Please try again later.",
