[CHORE] Seasonal Tiers

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4317,6 +4317,7 @@
   "description.superTotem.boost": "50% Reduction to Crop, Mineral, Fruit, Cooking and Tree Time",
   "description.super.totem.expired": "Your Super Totem has expired. Head to the Pumpkin Plaza to discover and craft more magical items to boost your farming abilities!",
   "description.super.totem.temporarily": "The Super Totem temporarily boosts your cooking, crops, trees & mineral time. Make the most of it!",
+  "seasonal.store": "Seasonal Store",
   "npcDialogues.pumpkinPete.chore1": "Have you seen the strange objects in the sky? Keep an eye on your crops!",
   "npcDialogues.pumpkinPete.chore2": "These new animal products are bringing so many new farming possibilities!",
   "npcDialogues.pumpkinPete.chore3": "The Farmers Market is busier than ever with all these new resources!",
