--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3718,6 +3718,9 @@
   "crafting.expansionSoon": "Your land will be ready soon...",
   "crafting.viewRecipes": "View recipes",
   "gems.buyReplenish": "Would you like to replenish the shops now for 20 Gems?",
+  "gems.clearStock": "You might want to buy all your stock before restocking",
+  "gems.noShipment": "No Shipment",
+  "gems.buyStock": "Please buy your stock to get your shipment.",
   "gems.replenish": "Replenish stock",
   "gems.nextFreeShipment": "Next free shipment:",
   "gems.outOfstock": "Out of stock",
