[FEAT] Bull Run banner bonus

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3114,7 +3114,7 @@
   "season.xp.boost": "10% XP boost",
   "season.lifetime.farmer": "Lifetime Farmer",
   "season.free.with.lifetime": "Free with Lifetime Farmer",
-  "season.pharaohs.gift": "5 Extra Desert Digs",
+  "season.bullRun.bonus": "10% less feed to feed animals",
   "season.ticket.bonus": "+2 {{item}}s (deliveries & chores)",
   "season.codex.intro": "Earn {{ticket}}s to craft exclusive collectibles & wearables for your farm in this limited season...Hurry before time runs out!",
   "season.codex.howToEarn": "How to earn {{ticket}}s?",
