[CHORE] Show more accurate restock numbers (#4725)
* [CHORE] Show more accurate restock numbers

* refactor restock

* Remove unused vars

* Separate stock into seeds and tools

* Add text for no shipment

* Rename const

* Craig's suggestion

Co-authored-by: Craig <41215134+c-py@users.noreply.github.com>

* Hide use gems text if the free stocks is ineffective

---------

Co-authored-by: Craig <41215134+c-py@users.noreply.github.com>

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3717,7 +3717,10 @@
   "crafting.readySoon": "{{name}} will be ready soon...",
   "crafting.expansionSoon": "Your land will be ready soon...",
   "crafting.viewRecipes": "View recipes",
-  "gems.buyReplenish": "Would to like to replenish the shops now for 20 Gems?",
+  "gems.buyReplenish": "Would you like to replenish the shops now for 20 Gems?",
+  "gems.purchasedStock": "Restocks purchased stock only",
+  "gems.noShipment": "No Shipment",
+  "gems.buyStock": "Please buy your stock to get your shipment.",
   "gems.replenish": "Replenish stock",
   "gems.nextFreeShipment": "Next free shipment:",
   "gems.outOfstock": "Out of stock",
